<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_vertical"
    android:paddingLeft="@dimen/margin_horizontal"
    android:paddingRight="@dimen/margin_horizontal"
    android:paddingTop="@dimen/margin_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/simple_calculator"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="serif" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-21dp"
        android:gravity="center"
        android:text="@string/by_108590061_hw5_part_1"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="40dp"
        android:text="@string/operator_button"
        android:textColor="#000000"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/first_operand"
        android:textColor="#000000"
        android:textSize="18sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/InpOne"
        android:layout_width="198dp"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:hint="@string/inpfirst"
        android:inputType="numberDecimal"
        android:textColorHighlight="#03AABF"
        android:textColorHint="#B5B3B3"
        android:textColorLink="#032297"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/second_operand"
        android:textColor="#000000"
        android:textSize="18sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/InpTwo"
        android:layout_width="198dp"
        android:layout_height="59dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:hint="@string/inpsec"
        android:inputType="numberDecimal"
        android:textColorHighlight="#03AABF"
        android:textColorHint="#B5B3B3"
        android:textColorLink="#032297"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="340dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="-240dp">

        <Button
            android:id="@+id/button_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="22dp"
            android:background="#D8C412"
            android:onClick="onAdd"
            android:text="@string/addition"
            android:textSize="18sp"

            />

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="87dp"
            android:background="#E61E1E"
            android:onClick="onSub"
            android:text="@string/subtraction"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="216dp"
            android:layout_marginBottom="6dp"
            android:background="#AE8AED"
            android:onClick="onDiv"
            android:text="@string/division"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="151dp"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="6dp"
            android:background="#75DD7A"
            android:onClick="onMul"
            android:text="@string/multiplication"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_power"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-103dp"
            android:layout_marginLeft="-103dp"
            android:layout_marginTop="281dp"
            android:layout_toEndOf="@+id/button_subtract"
            android:layout_toRightOf="@+id/button_subtract"
            android:background="#1387E3"
            android:onClick="onPow"
            android:text="@string/powerof"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/the_result"
        android:layout_width="355dp"
        android:layout_height="121dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:gravity="center|left"
        android:textColor="#000000"
        android:textSize="30sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-135dp"
        android:text="@string/the_result_is"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>